# http

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.adoc  index.html
.cursor/rules/: build-outputs.mdc  doc.mdc
.drone/: drone.bat  drone.sh
.github/workflows/: ci.yml  windows-quick.yml
cmake/: FindBrotli.cmake
doc/: agent-guide.md  antora.yml  local-playbook.yml  mrdocs.yml
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: 1.primer.adoc  2.messages.adoc  bcrypt.adoc  containers.adoc  http-protocol.adoc  index.adoc  parsing.adoc  reference.adoc  router.adoc  sans_io_philosophy.adoc  serializing.adoc
include/boost/: http.hpp  http_proto.hpp
include/boost/http/: application.hpp  bcrypt.hpp  body_read_stream.hpp  body_write_stream.hpp  brotli.hpp  config.hpp  datastore.hpp  error.hpp  field.hpp  fields.hpp  fields_base.hpp  file.hpp  file_mode.hpp  file_sink.hpp  file_source.hpp  header_limits.hpp  http_proto.natvis  json.hpp  message_base.hpp  metadata.hpp  method.hpp  parser.hpp  request.hpp  request_base.hpp  request_parser.hpp  response.hpp  response_base.hpp  response_parser.hpp  serializer.hpp  sink.hpp  source.hpp  static_request.hpp  static_response.hpp  status.hpp  string_body.hpp  version.hpp  zlib.hpp
include/boost/http/bcrypt/: error.hpp  hash.hpp  result.hpp  version.hpp
include/boost/http/brotli/: decode.hpp  encode.hpp  error.hpp  service.hpp  shared_dictionary.hpp  types.hpp
include/boost/http/core/: polystore.hpp  polystore_fwd.hpp
include/boost/http/detail/: any_bufref.hpp  config.hpp  except.hpp  file_posix.hpp  file_stdio.hpp  file_win32.hpp  header.hpp  sv.hpp  type_traits.hpp  workspace.hpp
include/boost/http/impl/: error.hpp  fields_base.hpp  parser.hpp  serializer.hpp  sink.hpp  source.hpp
include/boost/http/json/: json_sink.hpp
include/boost/http/rfc/: combine_field_values.hpp  list_rule.hpp  media_type.hpp  parameter.hpp  quoted_token_rule.hpp  quoted_token_view.hpp  token_rule.hpp  upgrade_rule.hpp
include/boost/http/server/: basic_router.hpp  cors.hpp  encode_url.hpp  escape_html.hpp  etag.hpp  flat_router.hpp  fresh.hpp  mime_db.hpp  mime_types.hpp  range_parser.hpp  route_handler.hpp  router.hpp  router_types.hpp  send_file.hpp  serve_static.hpp  statuses.hpp
include/boost/http/zlib/: compression_level.hpp  data_type.hpp  (+8 more)
include/boost/http_proto/: error.hpp  fields_base.hpp  file_sink.hpp  file_source.hpp  header_limits.hpp  json.hpp  message_base.hpp  multipart_form_sink.hpp  parser.hpp  parser_config.hpp  request.hpp  request_base.hpp  request_parser.hpp  response.hpp  response_base.hpp  response_parser.hpp  serializer.hpp  sink.hpp  source.hpp  status.hpp
meta/: explicit-failures-markup.xml  libraries.json
src/: application.cpp  config.cpp  datastore.cpp  error.cpp  field.cpp  fields_base.cpp  file_sink.cpp  file_source.cpp  header_limits.cpp  message_base.cpp  method.cpp  multipart_form_sink.cpp  parser.cpp  parser_config.cpp  request.cpp  request_base.cpp  request_parser.cpp  response.cpp  response_base.cpp  response_parser.cpp  serializer.cpp  sink.cpp  source.cpp  status.cpp  version.cpp  zlib_filter.hpp
src/bcrypt/: base64.cpp  base64.hpp  blowfish.cpp  blowfish.hpp  crypt.cpp  crypt.hpp  error.cpp  hash.cpp  random.cpp  random.hpp
src/brotli/: error.cpp
src/core/: polystore.cpp
src/detail/: array_of_const_buffers.cpp  array_of_const_buffers.hpp  brotli_filter_base.hpp  buffer_utils.hpp  except.cpp  file_posix.cpp  file_stdio.cpp  file_win32.cpp  filter.cpp  filter.hpp  header.cpp  move_chars.hpp  number_string.hpp  win32_unicode_path.hpp  workspace.cpp  zlib_filter_base.hpp
src/rfc/: combine_field_values.cpp  content_disposition_rule.cpp  parameter.cpp  quoted_token_rule.cpp  upgrade_rule.cpp
src/rfc/detail/: rules.cpp  rules.hpp  transfer_coding_rule.cpp  transfer_coding_rule.hpp
src/server/: basic_router.cpp  cors.cpp  encode_url.cpp  escape_html.cpp  etag.cpp  flat_router.cpp  fresh.cpp  helmet.cpp  mime_db.cpp  mime_types.cpp  range_parser.cpp  route_handler.cpp  route_rule.cpp  route_rule.hpp  router.cpp  router_types.cpp  send_file.cpp  serve_static.cpp  statuses.cpp
src/server/detail/: pct_decode.cpp  pct_decode.hpp  route_match.cpp  route_match.hpp  route_rule.hpp  router_base.cpp  router_base.hpp  stable_string.hpp
src/zlib/: error.cpp
src_brotli/: decode.cpp  encode.cpp  shared_dictionary.cpp
src_zlib/: deflate.cpp  inflate.cpp  stream_cast.hpp
test/: CMakeLists.txt  Jamfile
test/cmake_test/: CMakeLists.txt  main.cpp
test/limits/: CMakeLists.txt  Jamfile  limits.cpp
test/unit/: CMakeLists.txt  Jamfile  application.cpp  bcrypt.cpp  body_read_stream.cpp  body_write_stream.cpp  brotli.cpp  compression.cpp  datastore.cpp  error.cpp  field.cpp  fields.cpp  fields_base.cpp  file.cpp  file_mode.cpp  file_sink.cpp  file_source.cpp  file_test.hpp  header_limits.cpp  http_proto.cpp  json.cpp  message_base.cpp  metadata.cpp  method.cpp  multipart_form_sink.cpp  natvis.cpp  parser.cpp  parser_config.cpp  request.cpp  request_parser.cpp  response.cpp  response_parser.cpp  run_sync.hpp  sandbox.cpp  serializer.cpp  serializer_sink.cpp  sink.cpp  source.cpp  static_request.cpp  static_response.cpp  (+6 more)
test/unit/bcrypt/: bcrypt_error.cpp  hash.cpp  result.cpp  version.cpp
test/unit/brotli/: brotli_error.cpp  decode.cpp  encode.cpp  shared_dictionary.cpp  types.cpp
test/unit/core/: polystore.cpp  polystore_fwd.cpp
test/unit/detail/: file_posix.cpp  file_stdio.cpp  file_win32.cpp
test/unit/json/: json_sink.cpp
test/unit/rfc/: chunk_ext_rule.cpp  combine_field_values.cpp  content_disposition_rule.cpp  list_rule.cpp  parameter.cpp  quoted_token_rule.cpp  quoted_token_view.cpp  token_rule.cpp  upgrade_rule.cpp
test/unit/server/: basic_router.cpp  cors.cpp  flat_router.cpp  helmet.cpp  route_handler.cpp  router.cpp  router_types.cpp  serve_static.cpp  statuses.cpp  test_route_handler.hpp
test/unit/zlib/: compression_level.cpp  compression_method.cpp  compression_strategy.cpp  data_type.cpp  deflate.cpp  flush.cpp  inflate.cpp  stream.cpp  zlib_error.cpp
(+28 files in other folders)
